# Sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  sentinel.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
sentinel/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  logger.py  models.py  output.py
sentinel/data/: __init__.py
sentinel/modules/: __init__.py  auth.py  base.py  fingerprint.py  graphql.py  idor.py  inject.py  ssrf.py
sentinel/utils/: http.py
tests/: test_boundary_auth.py  test_boundary_http.py  test_boundary_idor.py  test_boundary_modules.py  test_boundary_output.py  test_cli.py  test_http.py  test_models.py
